Fix vertical alignment of shortcut icons
- Add min-height to shortcut label

--- a/static/themes/default/css/plinth.css
+++ b/static/themes/default/css/plinth.css
@@ -114,3 +114,7 @@ footer {
 footer license-info p{
     margin: 20px 0;
 }
+
+.shortcut-label {
+    min-height:50px;
+}
